number-planet/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: number-planet-app
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0 
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: number-planet
  template:
    metadata:
      labels:
        app: number-planet
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: number-planet
        image: __WEB_APP_IMAGE__
        ports:
          - containerPort: 80
          
        startupProbe:  # 이 부분 추가
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 12
        readinessProbe: 
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:  
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20

        lifecycle:
          preStop:
            exec:
              command: ["/bin/sh", "-c", "sleep 15"] 

        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
