number-planet/service.yml
apiVersion: v1
kind: Service
metadata:
  name: number-planet-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: number-planet
