number-planet/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: number-planet-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTP'
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: number-planet-service
            port:
              number: 80
